# microservices

tp_rabbitmq_final/: Dockerfile  Makefile  docker-compose.yml  init-multi-db.sh  pyproject.toml  test_api.ps1
tp_rabbitmq_final/services/customer_service/: main.py
tp_rabbitmq_final/services/customer_service/application/: dtos.py
tp_rabbitmq_final/services/customer_service/application/services/: crud_service.py
tp_rabbitmq_final/services/customer_service/domain/: entities.py  events.py
tp_rabbitmq_final/services/customer_service/infrastructure/db/: repository.py  schema.py  unit_of_work.py
tp_rabbitmq_final/services/gateway_service/: main.py
tp_rabbitmq_final/services/inventory_service/: main.py
tp_rabbitmq_final/services/inventory_service/application/: dtos.py
tp_rabbitmq_final/services/inventory_service/domain/: entities.py  events.py
tp_rabbitmq_final/services/order_service/: main.py
tp_rabbitmq_final/services/order_service/application/: dtos.py
tp_rabbitmq_final/services/order_service/domain/: entities.py  events.py
tp_rabbitmq_final/services/pricing_service/: main.py
tp_rabbitmq_final/services/pricing_service/application/: dtos.py
tp_rabbitmq_final/services/pricing_service/domain/: entities.py  events.py
tp_rabbitmq_final/services/product_service/: main.py
tp_rabbitmq_final/services/product_service/application/: dtos.py
tp_rabbitmq_final/services/product_service/domain/: entities.py
tp_rabbitmq_final/tests/: test_customer_service.py  test_inventory_service.py  test_order_service.py  test_pricing_service.py  test_product_service.py
(+51 files in other folders)
